--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,5 +1,6 @@
 <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
   <div class="card h-100 bg-dark text-light shadow-sm border-0 movie-card">
+    <% movie = bookmark.movie %>
     <% if movie.poster_url.present? %>
       <img src="<%= movie.poster_url %>" class="card-img-top object-fit-cover" style="height: 300px;" alt="<%= movie.title %>">
     <% else %>
@@ -14,9 +15,27 @@
         <p class="card-text text-secondary small"><%= truncate(movie.overview, length: 80) %></p>
       </div>
 
+      <% if bookmark.comment.present? %>
+        <div class="mt-3 p-2 bg-secondary bg-opacity-25 border-start border-3 border-danger rounded">
+          <small class="text-info fw-bold d-block mb-1">
+            Your note:
+          </small>
+          <p class="fst-italic mb-0 text-light">"<%= bookmark.comment %>"</p>
+        </div>
+      <% end %>
+
+
       <% if movie.respond_to?(:rating) && movie.rating.present? %>
         <span class="badge bg-danger mt-2 align-self-start">⭐ <%= movie.rating.round(1) %></span>
       <% end %>
+
+      <!-- Delete-Button -->
+      <div class="mt-3">
+      <%= link_to "Delete",
+        bookmark_path(bookmark),
+        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove this movie?" },
+        class: "btn btn-outline-danger btn-sm w-100 fw-bold shadow-sm" %>
+        </div>
     </div>
   </div>
 </div>
