--- a/app/views/lists/_add_list_modal.html.erb
+++ b/app/views/lists/_add_list_modal.html.erb
@@ -1,7 +1,6 @@
 <div class="modal fade" id="addListModal" tabindex="-1" aria-labelledby="addListModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content shadow-lg overflow-hidden rounded-4 border-0">
-
+  <div class="modal-dialog modal-dialog-centered modal-lg border-2 border-light-subtle rounded-4">
+    <div class="modal-content bg-dark text-light border border-2 border-white rounded-4">
       <div class="row g-0">
         <!-- Left Side: Image -->
         <div class="col-md-6 d-none d-md-block">
@@ -13,7 +12,7 @@
         <!-- Right Side: Form -->
         <div class="col-md-6 bg-white p-5 d-flex flex-column justify-content-center">
           <div class="d-flex justify-content-between align-items-start mb-3">
-            <h5 class="modal-title fw-bold text-uppercase" id="addListModalLabel">
+            <h5 class="modal-title fw-bold text-uppercase text-dark" id="addListModalLabel">
               Create a New List
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -26,9 +25,10 @@
                           label: false,
                           placeholder: "Enter a name for your list...",
                           input_html: { class: "form-control border-2 border-dark-subtle py-2" } %>
+              <%= f.input :photo, as: :file %>
             </div>
 
-            <div class="d-grid">
+            <div class="d-grid mt-4">
               <%= f.submit "Create List", class: "btn btn-danger text-white fw-bold py-2 fs-6 rounded-3 shadow-sm" %>
             </div>
           <% end %>
